2006-07-23  Manfred Paulus  <manfred.paulus@gmx.de>
	* src/BaseDoc.py: fix angle calculation
	* src/docgen/PSDrawDoc.py: fix angle calculation

2006-07-23  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py (GedcomParser.func_person_even): set
	default type for an event to CUSTOM

2006-07-23  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_IsLessThanNthGenerationDescendantOf.py
	(IsLessThanNthGenerationDescendantOf.init_list): Use new API.
	* src/Filters/Rules/Person/_IsSiblingOfFilterMatch.py
	(IsSiblingOfFilterMatch.init_list): Use new API.
	* src/Filters/Rules/Person/_RelationshipPathBetween.py
	(RelationshipPathBetween.desc_list): Use new API.
	* src/Filters/Rules/Person/_HaveChildren.py (HaveChildren.apply):
	Use new API.
	* src/Filters/Rules/Person/_IsMoreThanNthGenerationDescendantOf.py
	(IsMoreThanNthGenerationDescendantOf.init_list): Use new API.
	* src/Filters/Rules/__init__.py: Expose Rule for plugin filters.
	* src/Filters/Rules/Person/_IsDescendantOf.py
	(IsDescendantOf.init_list): Use new API.
	* src/Filters/Rules/Person/_HasRelationship.py
	(HasRelationship.apply): Use new API.

2006-07-22  Don Allingham  <don@gramps-project.org>
	* src/Filters/Rules/Person/__init__.py: add register function
	* configure.in: bump up version number 

2006-07-22  Alex Roitman  <shura@gramps-project.org>
	* Makefile.am (SUBDIRS): Add debian dir.
	* configure.in: Generate debian/Makefile
	* debian/Makefile.am: Add makefile to place the debian dir in the
	released tarball.

2006-07-21  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_ReportUtils.py: fix modified birth string (bug # 266).

2006-07-21  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: launch image viewer in Windows.
	* src/Mime/_WinMime.py: handle rundll32.exe applications.
	* src/Utils.py: search path in Windows when looking for applications.

2006-07-21  Don Allingham  <don@gramps-project.org>